# skill-workflow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.sh  video-editing-skill-platform-dev.md
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: executions.py  sessions.py  skills.py  workflows.py
backend/app/core/: __init__.py  llm_client.py  orchestrator.py  session_manager.py  skill_parser.py  skill_registry.py  subagent.py  workflow_engine.py
backend/app/middleware/: __init__.py  skill_middleware.py
backend/app/models/: __init__.py  session.py  skill.py  workflow.py
backend/app/storage/: __init__.py  local_store.py
backend/app/tools/: __init__.py  skill_tools.py  system_tools.py
backend/app/ws/: execution_ws.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chat/: AgentChatPanel.tsx  index.ts
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/session/: SessionList.tsx
frontend/src/components/workflow/: NodeConfigPanel.tsx  SkillNode.tsx  WorkflowCanvas.tsx  WorkflowLibrary.tsx  WorkflowToolbar.tsx  index.ts
frontend/src/hooks/: useExecution.ts  useSkills.ts
frontend/src/stores/: workflowStore.ts
frontend/src/types/: index.ts
